<resources>
    <string name="app_name">Food Your Way</string>
    <string name="appTitle">Welcome to FWY</string>


    <!-- Bar-menu -->
    <string name="action_donate">Settings</string>
    <string name="action_basket_name">Basket</string>

    <!-- Heading -and-Navigation Drawer-->
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">you are logged in as:</string>
    <string name="nav_header_subtitle">http://foodyourway.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="messageLoading">Please wait while we Connect to the Server…</string>

    <!-- Menu -->
    <string name="menu_fyw">Menu</string>
    <string name="menu_basket">Basket</string>
    <string name="menu_recipes">All Recipes</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Create Own Recipe</string>
    <string name="menu_send">Payment Details</string>
    <string name="menu_orders_all">All Orders</string>
    <!-- About - fragment-->
    <string name="aboutus_title">Food you way </string>
    <string name="aboutus_message">We want to make your happy, we are specialised,\n\nin Making Delicious Healthy Foods for you.\n\n Let us know how you feel!</string>

    <!-- Home- -->
    <string name="glutenfree">GlutenFree</string>
    <string name="productTitle">Product Name</string>
    <string name="vegan">Vegan</string>
    <string name="amount">Amount</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$ Total</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="action_test">TEstingString</string>
    <string name="price"> € 5,00</string>
    <string name="quantity_textView">quantity</string>
    <string name="dairyfree">DairyFree</string>
    <string name="messageDescription">Description of the product</string>
    //menu layout

    <!-- Basket -->

    <string name="text_basket_edit">Slide Right to edit your order</string>
    <string name="text_basket_delete">Slide Left to delete your order</string>
    <string name="addButton">Add to Basket</string>
    <string name="basketTitle">Title</string>
    <string name="messageDesc">User message.</string>
    //basket layout

    <!-- Edit - fragment_edit strings-->
    <string name="txtUserMessage">Anything else we need to know? Write it bellow:</string>
    <string name="action_edit">Edit Order</string>
    <string name="action_update">Update</string>
    <string name="message_edit">Please Update the order Details Below</string>
    <string name="txtQuantity">Quantity of items:</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>


    <string name="select_profile_image">Select Profile Image</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="edit_txt_example1">Highly alergic to peanuts?</string>
    <string name="edit_txt_example0">example:</string>
    <string name="edit_txt_example2">sauce on the side.</string>
    <!--END Firebase Resources-->


    <!--Array for implementing spinner/filter-->
    <string-array name="food_array">
        <item>Vegan Burger</item>
        <item>Salad</item>
        <item>GF_Kebab</item>
    </string-array>

    <string-array name="food_description_array">
        <item>Sour dough bread, with a delicious pesto vegan sauce.</item>
        <item>Mix of leaves with goat cheese.</item>
        <item>Gluten free bread, with a delicious kebab meat.</item>
    </string-array>


    <!--his will change to an integer at futurte, to sum the amount-->
    <string-array name="food_price_array">
        <item>5.00</item>
        <item>4.00</item>
        <item>7.00</item>
    </string-array>

</resources>
