<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:elevation="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="55dp"
            android:layout_marginRight="16dp"
            android:contentDescription="Default image showing, brocoli"
            app:srcCompat="@mipmap/ic_brocoli" />

        <TextView
            android:id="@+id/order_name"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-62dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/imageIcon"
            android:text="@string/productTitle"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/paymentamount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imagefavourite"
            android:layout_marginStart="146dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="-61dp"
            android:layout_toStartOf="@+id/imagefavourite"
            android:layout_toEndOf="@+id/order_name"
            android:text="TextView"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:text="0" />

        <TextView
            android:id="@+id/messageDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_name"
            android:layout_marginStart="23dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="2dp"
            android:layout_toStartOf="@+id/alergens"
            android:layout_toEndOf="@+id/imageIcon"
            android:text="@string/messageDesc"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/alergens"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/order_name"
            android:text="@string/dairyfree"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imagefavourite"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/alergens"
            android:contentDescription="image of V"
            app:srcCompat="@android:drawable/checkbox_on_background" />

        <TextView
            android:id="@+id/textItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alergens"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="110dp"
            android:text="TextView" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>